05 batch - still struggling with spark