@@ -90,22 +90,196 @@ See article [sort merge vs broadcast](https://medium.com/swlh/spark-joins-tuning
 Most of the time we don't need to use RDDs
 - do map / reduce  
 
-## 07 RDDs mapPartitions
-
-
+## 07 [RDDs mapPartitions](./07_taxi_rides_spark.ipynb07)
 Use map when the transformation logic is straightforward and can be applied independently to each element without requiring context from other elements or partitions.
 
 Use mapPartitions when the transformation requires setup or teardown of resources (like database connections) that are expensive to initialize for each element but can be shared across elements within the same partition.
 
-
 skip to nexttm, spark with gcs 
 
-## 08 Spark with GCP 
+## 08 Spark with GCS
+
+* Connect to GCS
+- [read GCS Bucket](./08_taxi_rides_spark.ipynb)
+- 
+
+
+
+## 09 Spark Standalone
+
+
+
+### [Starting a SPark Cluster Manually](https://spark.apache.org/docs/3.5.3/spark-standalone.html#starting-a-cluster-manually)
+
+### Start Spark Master 
+From GCP VM
+`$SPARK_HOME/sbin/start-master.sh --port 7077 --webui-port 9090`
+By Default it started a spark UI in port: 8080, sending it to 9090
+
+Command result
+`starting org.apache.spark.deploy.master.Master, logging to /home/spark_jhigaki_gcp/spark/spark-3.4.4-bin-hadoop3/logs/spark-spark_jhigaki_gcp-org.apache.spark.deploy.master.Master-1-spark-medium.out`
+
+See log
+`cat /home/spark_jhigaki_gcp/spark/spark-3.4.4-bin-hadoop3/logs/spark-spark_jhigaki_gcp-org.apache.spark.deploy.master.Master-1-spark-medium.out`
+
+```bash
+Spark Command: /home/spark_jhigaki_gcp/spark/jdk-11.0.2/bin/java -cp /home/spark_jhigaki_gcp/spark/spark-3.4.4-bin-hadoop3/conf/:/home/spark_jhigaki_gcp/spark/spark-3.4.4-bin-hadoop3/jars/* -Xmx1g org.apache.spark.deploy.master.Master --host spark-medium.europe-southwest1-a.c.de-zoomcamp-jhigaki-course.internal --port 7077 --webui-port 8080
+========================================
+Using Spark's default log4j profile: org/apache/spark/log4j2-defaults.properties
+24/12/02 12:26:41 INFO Master: Started daemon with process name: 11787@spark-medium
+24/12/02 12:26:41 INFO SignalUtils: Registering signal handler for TERM
+24/12/02 12:26:41 INFO SignalUtils: Registering signal handler for HUP
+24/12/02 12:26:41 INFO SignalUtils: Registering signal handler for INT
+24/12/02 12:26:42 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable
+24/12/02 12:26:42 INFO SecurityManager: Changing view acls to: spark_jhigaki_gcp
+24/12/02 12:26:42 INFO SecurityManager: Changing modify acls to: spark_jhigaki_gcp
+24/12/02 12:26:42 INFO SecurityManager: Changing view acls groups to: 
+24/12/02 12:26:42 INFO SecurityManager: Changing modify acls groups to: 
+24/12/02 12:26:42 INFO SecurityManager: SecurityManager: authentication disabled; ui acls disabled; users with view permissions: spark_jhigaki_gcp; groups with view permissions: EMPTY; users with modify permissions: spark_jhigaki_gcp; groups with modify permissions: EMPTY
+24/12/02 12:26:42 INFO Utils: Successfully started service 'sparkMaster' on port 7077.
+24/12/02 12:26:42 INFO Master: Starting Spark master at spark://spark-medium.europe-southwest1-a.c.de-zoomcamp-jhigaki-course.internal:7077
+24/12/02 12:26:42 INFO Master: Running Spark version 3.4.4
+24/12/02 12:26:42 INFO JettyUtils: Start Jetty 0.0.0.0:8080 for MasterUI
+24/12/02 12:26:42 INFO Utils: Successfully started service 'MasterUI' on port 8080.
+24/12/02 12:26:43 INFO MasterWebUI: Bound MasterWebUI to 0.0.0.0, and started at http://spark-medium.europe-southwest1-a.c.de-zoomcamp-jhigaki-course.internal:8080
+24/12/02 12:26:43 INFO Master: I have been elected leader! New state: ALIVE
+```
+
+
+### Forward Port 
+8080 from GCP VM to  Dev container 4080
+`ssh -L 4080:localhost:8080 de-zoomcamp-spark-medium`
+
+4080 Dev container to Win Host 4080
+
+`added manually in vs.code terminal` 
+
+This is because I was already running `8080` in the container and forwarded to Win Host for Airflow UI
+
+### Accessing standalone SPark UI 
+![alt text](../_resources/05-batch/readme.md/image-6.png)
+
+URL: `spark://spark-medium.europe-southwest1-a.c.de-zoomcamp-jhigaki-course.internal:7077`
+
+If I try to read / show: EXECUTE
+
+Get an error pbecause we have no executers (Workers)
+
+```bash
+24/12/02 12:52:15 WARN MetricsConfig: Cannot locate configuration: tried hadoop-metrics2-google-hadoop-file-system.properties,hadoop-metrics2.properties
+24/12/02 12:52:32 WARN TaskSchedulerImpl: Initial job has not accepted any resources; check your cluster UI to ensure that workers are registered and have sufficient resources
+24/12/02 12:52:47 WARN TaskSchedulerImpl: Initial job has not accepted any resources; check your cluster UI to ensure that workers are registered and have sufficient resources
+```
+![alt text](../_resources/05-batch/readme.md/image-7.png)
+
+
+
+### Start Spark Worker
+From GCP VM
+`$SPARK_HOME/sbin/start-worker.sh spark://spark-medium.europe-southwest1-a.c.de-zoomcamp-jhigaki-course.internal:7077`
+
+Result
+`starting org.apache.spark.deploy.worker.Worker, logging to /home/spark_jhigaki_gcp/spark/spark-3.4.4-bin-hadoop3/logs/spark-spark_jhigaki_gcp-org.apache.spark.deploy.worker.Worker-1-spark-medium.out`
+
+```bash
+Spark Command: /home/spark_jhigaki_gcp/spark/jdk-11.0.2/bin/java -cp /home/spark_jhigaki_gcp/spark/spark-3.4.4-bin-hadoop3/conf/:/home/spark_jhigaki_gcp/spark/spark-3.4.4-bin-hadoop3/jars/* -Xmx1g org.apache.spark.deploy.worker.Worker --webui-port 8081 spark://spark-medium.europe-southwest1-a.c.de-zoomcamp-jhigaki-course.internal:7077
+========================================
+Using Spark's default log4j profile: org/apache/spark/log4j2-defaults.properties
+24/12/02 12:55:55 INFO Worker: Started daemon with process name: 14142@spark-medium
+24/12/02 12:55:55 INFO SignalUtils: Registering signal handler for TERM
+24/12/02 12:55:55 INFO SignalUtils: Registering signal handler for HUP
+24/12/02 12:55:55 INFO SignalUtils: Registering signal handler for INT
+24/12/02 12:55:55 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable
+24/12/02 12:55:56 INFO SecurityManager: Changing view acls to: spark_jhigaki_gcp
+24/12/02 12:55:56 INFO SecurityManager: Changing modify acls to: spark_jhigaki_gcp
+24/12/02 12:55:56 INFO SecurityManager: Changing view acls groups to: 
+24/12/02 12:55:56 INFO SecurityManager: Changing modify acls groups to: 
+24/12/02 12:55:56 INFO SecurityManager: SecurityManager: authentication disabled; ui acls disabled; users with view permissions: spark_jhigaki_gcp; groups with view permissions: EMPTY; users with modify permissions: spark_jhigaki_gcp; groups with modify permissions: EMPTY
+24/12/02 12:55:56 INFO Utils: Successfully started service 'sparkWorker' on port 32981.
+24/12/02 12:55:56 INFO Worker: Worker decommissioning not enabled.
+24/12/02 12:55:56 INFO Worker: Starting Spark worker 10.204.0.4:32981 with 2 cores, 6.8 GiB RAM
+24/12/02 12:55:56 INFO Worker: Running Spark version 3.4.4
+24/12/02 12:55:56 INFO Worker: Spark home: /home/spark_jhigaki_gcp/spark/spark-3.4.4-bin-hadoop3
+24/12/02 12:55:56 INFO ResourceUtils: ==============================================================
+24/12/02 12:55:56 INFO ResourceUtils: No custom resources configured for spark.worker.
+24/12/02 12:55:56 INFO ResourceUtils: ==============================================================
+24/12/02 12:55:57 INFO JettyUtils: Start Jetty 0.0.0.0:8081 for WorkerUI
+24/12/02 12:55:57 INFO Utils: Successfully started service 'WorkerUI' on port 8081.
+24/12/02 12:55:57 INFO WorkerWebUI: Bound WorkerWebUI to 0.0.0.0, and started at http://spark-medium.europe-southwest1-a.c.de-zoomcamp-jhigaki-course.internal:8081
+24/12/02 12:55:57 INFO Worker: Connecting to master spark-medium.europe-southwest1-a.c.de-zoomcamp-jhigaki-course.internal:7077...
+24/12/02 12:55:57 INFO TransportClientFactory: Successfully created connection to spark-medium.europe-southwest1-a.c.de-zoomcamp-jhigaki-course.internal/10.204.0.4:7077 after 55 ms (0 ms spent in bootstraps)
+24/12/02 12:55:57 INFO Worker: Successfully registered with master spark://spark-medium.europe-southwest1-a.c.de-zoomcamp-jhigaki-course.internal:7077
+24/12/02 12:55:57 INFO Worker: Asked to launch executor app-20241202125145-0000/0 for test_standalone
+24/12/02 12:55:57 INFO SecurityManager: Changing view acls to: spark_jhigaki_gcp
+24/12/02 12:55:57 INFO SecurityManager: Changing modify acls to: spark_jhigaki_gcp
+24/12/02 12:55:57 INFO SecurityManager: Changing view acls groups to: 
+24/12/02 12:55:57 INFO SecurityManager: Changing modify acls groups to: 
+24/12/02 12:55:57 INFO SecurityManager: SecurityManager: authentication disabled; ui acls disabled; users with view permissions: spark_jhigaki_gcp; groups with view permissions: EMPTY; users with modify permissions: spark_jhigaki_gcp; groups with modify permissions: EMPTY
+24/12/02 12:55:57 INFO ExecutorRunner: Launch command: "/home/spark_jhigaki_gcp/spark/jdk-11.0.2/bin/java" "-cp" "/home/spark_jhigaki_gcp/spark/spark-3.4.4-bin-hadoop3/conf/:/home/spark_jhigaki_gcp/spark/spark-3.4.4-bin-hadoop3/jars/*" "-Xmx1024M" "-Dspark.driver.port=33861" "-Djava.net.preferIPv6Addresses=false" "-XX:+IgnoreUnrecognizedVMOptions" "--add-opens=java.base/java.lang=ALL-UNNAMED" "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED" "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED" "--add-opens=java.base/java.io=ALL-UNNAMED" "--add-opens=java.base/java.net=ALL-UNNAMED" "--add-opens=java.base/java.nio=ALL-UNNAMED" "--add-opens=java.base/java.util=ALL-UNNAMED" "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED" "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED" "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED" "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED" "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED" "--add-opens=java.base/sun.security.action=ALL-UNNAMED" "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED" "--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED" "-Djdk.reflect.useDirectMethodHandle=false" "org.apache.spark.executor.CoarseGrainedExecutorBackend" "--driver-url" "spark://CoarseGrainedScheduler@spark-medium.europe-southwest1-a.c.de-zoomcamp-jhigaki-course.internal:33861" "--executor-id" "0" "--hostname" "10.204.0.4" "--cores" "2" "--app-id" "app-20241202125145-0000" "--worker-url" "spark://Worker@10.204.0.4:32981" "--resourceProfileId" "0"
+```
+![alt text](../_resources/05-batch/readme.md/image-8.png)
+
+Now I do have 1 worker
+
+### Start Second worker 
+
+Start another VM
+`spark-instance`
+
+Ensure GCS Hadoop conector is there
+
+`mkdir ~/spark/lib`
+
+`gsutil cp gs://hadoop-lib/gcs/gcs-connector-3.0.4.jar ~/spark/lib/.` 
+
+Start worker
+`$SPARK_HOME/sbin/start-worker.sh spark://spark-medium.europe-southwest1-a.c.de-zoomcamp-jhigaki-course.internal:7077`
+
+![alt text](../_resources/05-batch/readme.md/image-9.png)
+
+
+
+
+* Connect to standalone spark
+- write
+
+
+```mermaid
+graph TD
+  Host[Host Machine (Win 11)]
+  Docker[Docker]
+  DevContainer[Dev Container (VS Code)]
+  GCVM[GC VM (de-zoomcamp-spark-medium)]
+  SparkUI[Spark UI (Port 8080)]
+
+  Host -->|has| Docker
+  Docker -->|runs| DevContainer
+  DevContainer -->|controls| GCVM
+  GCVM -->|runs| SparkUI
+  SparkUI -->|Port 8080| DevContainer
+  DevContainer -->|Port 4080| Host
+```
+
+
+# On your master node, check the Spark worker logs
+/home/spark_jhigaki_gcp/spark/spark-3.4.4-bin-hadoop3/logs/spark-spark_jhigaki_gcp-org.apache.spark.deploy.worker.Worker-1-spark-medium.out 
+cat /home/spark_jhigaki_gcp/spark/spark-3.4.4-bin-hadoop3/logs/*.out | grep "google.cloud.auth.service.account.json.keyfile"
+
+cat /home/spark_jhigaki_gcp/spark/spark-3.4.4-bin-hadoop3/logs/spark-spark_jhigaki_gcp-org.apache.spark.deploy.worker.Worker-1-spark-medium.out   | grep "google.cloud.auth.service.account.json.keyfile"
 
 
 
 
 
+`$SPARK_HOME/sbin/stop-master.sh`
+`$SPARK_HOME/sbin/stop-worker.sh`
 
-    
+`$SPARK_HOME/sbin/start-master.sh`
+`$SPARK_HOME/sbin/start-worker.sh spark://spark-medium.europe-southwest1-a.c.de-zoomcamp-jhigaki-course.internal:7077`
 
+
+
+
+
+I cannot spark write to GCS (csv or parquet), even in standalone mode
+With credentials having Owner roles, I'm still getting a 403
